# auto-reviewer

./: .gitignore  README.md  pyproject.toml  setup.cfg
auto_reviewer/: __init__.py  cli.py
auto_reviewer/core/: config.py  git.py  report.py  reviewer.py  static_analysis.py
tests/: __init__.py  test_config.py  test_static_analysis.py
